--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <strong class="text-6xl">I'm</strong> an undergraduate pursuing a
               Bachelor of Technology in Computer Science. I have a keen interest
               in building websites and learning new technologies. My mindset to
-              explore new things paves the way for new things to explore. I'm
+              explore new things paves the way for creativity. I'm
               trying my best to analyze real-world problems and find solutions
               to them, as I can do using Computer Science.
             </p>
