Update index.html 1

--- a/index.html
+++ b/index.html
@@ -265,7 +265,34 @@
                 </div>
               </td>
             </tr>
-           
+           <tr>
+              <td>
+                <div class="border-4 rounded-lg border-black-500">
+                  <h1 class="text-xl text-rose-600 inline">
+                    Project 2: Task Management App
+                  </h1>
+
+                  <span class="text-xl"><b>Tech Stack:</b></span>
+                  <span class="text-lg"
+                    >ExpressJS, MongoDB, NodeJS, BootStrap</span
+                  >
+                  <span class="text-xl github-link"
+                    ><a
+                      href="https://github.com/shreeyanshiShukla41/TaskManagementApp2"
+                      target="_blank"
+                      >| Github</a
+                    ></span
+                  >
+                  <span class="text-xl github-link"
+                    ><a
+                      href="https://taskmanagementapp2.onrender.com/"
+                      target="_blank"
+                      >| Demo</a
+                    ></span
+                  >
+                </div>
+              </td>
+            </tr>
           </tbody>
         </table>
       </div>
